# refactool

./: GUI.ui  README.txt  gui.py  refactool.py  refactool_cl.py  refactool_core.py  refactool_gui.py  refactoring4.py  refactoring8.py  refactoring9.py  teste1-transformado.c  teste1.c  teste5.c  teste6-transformado.c  teste7-transformado.c  teste8-transformado.c  teste8.c  teste9-transformado.c  teste9.c  toll.py  util.py
Projects/: default
Projects/mptris-1.9/src/: Makefile.am  Makefile.in  cmdline.c  refactool_log.txt  tris.c  ui-textmode.h
Projects/mptris-1.9/src/refactool-transformacoes/: ui-textmode.c
gnuchess-5.06/: AUTHORS  ChangeLog  INSTALL  NEWS  TODO  aclocal.m4  refactool_log.txt
gzip-1.2.4/: refactool_log.txt
mptris-1.9/: Makefile.am  Makefile.in  NEWS  configure.ac  less.m4  strdup.m4
mptris-1.9/man/: Makefile.am  makeman.sh  mptris.1
mptris-1.9/po/: ChangeLog  mptris.pot
mptris-1.9/src/: cmdline.h  mptris.ggo  refactool_log.txt  tris.h
refactool-examples/: refactool-examples.cbp  refactool_log.txt  teste4.c  teste7.c  teste8.c  teste9.c
refactool_example/: analisar_diff  erro_9  log.txt  refactool-examples.cbp  refactool-examples.depend  refactool-examples.layout  refactool_log.txt  teste1.c  teste10.c  teste11.c  teste15.c  teste16.c  teste19.c  teste21.c  teste22.c  teste23.c  teste25.c  teste31.c  teste32.c  teste33.c  teste6.c  teste8.c  teste_a.c  teste_b.c  teste_c.c  teste_d.c  teste_e.c  teste_f.c  teste_g.c  teste_h.c  teste_k.c  teste_l.c  teste_m.c  teste_n.c  teste_o.c  teste_p.c  teste_q.c  teste_r.c  teste_t.c  teste_w.c  (+2 more)
(+296 files in other folders)
